Todo el Sitio con SASS II + SEO

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aplicación Web</title>
+
+  <meta name="description"
+    content="Sitio de AplicacionWeb donde encontrarás todas sus Características y Funcionalidad, así como los planes disponibles y toda la Documentación y Soporte que necesitás.">
+  <meta name="keywords"
+    content="APLICACIONWEB, INMOBILIARIA, CONTRATOS, ALQUILERES, ADMINISTRACION, VENTAS, INTERESADOS, TAREAS">
+  <title>AplicacionWeb | Inicio</title>
+
   <!-- GOOGLE FONTS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -68,13 +74,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="./images/aplicacion.jpg" class="d-block w-100" alt="aplicacion2">
+        <img src="./images/aplicacion.webp" class="d-block w-100" alt="aplicacion2">
       </div>
       <div class="carousel-item">
-        <img src="./images/aplicacion1.jpg" class="d-block w-100" alt="aplicacion1">
+        <img src="./images/aplicacion1.webp" class="d-block w-100" alt="aplicacion1">
       </div>
       <div class="carousel-item">
-        <img src="./images/aplicacion2.jpg" class="d-block w-100" alt="aplicacion">
+        <img src="./images/aplicacion2.webp" class="d-block w-100" alt="aplicacion">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#elCarousel" data-bs-slide="prev">
@@ -129,7 +135,7 @@
     <!-- SIDEBAR -->
     <aside>
 
-      <img src="./images/software-adaptable.png" alt="Aplicacion" />
+      <img src="./images/software-adaptable.webp" alt="Aplicacion" />
 
       <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
@@ -202,24 +208,24 @@
       <section>
         <div class="formasContacto">
           <div>
-            <a href="mailto:cuenta@deemail.com" target="_blank">
+            <a href="mailto:contacto@aplicacionweb.com" target="_blank" rel="noopener">
               <img src="./images/icono-email1.png" alt="email" />
             </a>
           </div>
           <div>
-            <a href="mailto:cuenta@deemail.com" target="_blank">
+            <a href="mailto:contacto@aplicacionweb.com" target="_blank" rel="noopener">
               contacto@aplicacionweb.com
             </a>
           </div>
         </div>
         <div class="formasContacto">
           <div>
-            <a href="tel:01234567890">
+            <a href="tel:541112345678">
               <img src="./images/icono-telefono1.png" alt="telefono" />
             </a>
           </div>
           <div>
-            <a href="tel:01234567890">
+            <a href="tel:541112345678">
               +54 11 1234-5678
             </a>
 
@@ -227,12 +233,12 @@
         </div>
         <div class="formasContacto">
           <div>
-            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank" rel="noopener">
               <img src="./images/icono-ubicacion1.png" alt="ubicacion" />
             </a>
           </div>
           <div>
-            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank">
+            <a href="https://goo.gl/maps/VvyzL8QicnmUFGUs7" target="_blank" rel="noopener">
               Av. Cabildo 2000, C1428, CABA, Argentina
             </a>
 
