Todo el Sitio con SASS II + SEO

--- a/contacto.html
+++ b/contacto.html
@@ -124,7 +124,7 @@
         quis tempore odio, neque non, aliquam reprehenderit nulla numquam
         deserunt, quisquam aut. Adipisci, repudiandae. Tempore.
       </p>
-      <img src="./images/aplicacion.jpg" alt="Aplicacion" />
+      <img src="./images/aplicacion.webp" alt="Aplicacion" />
     </aside>
 
   </div>
