Tercera Entrega del Proyecto Final

--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -65,29 +65,40 @@
 
 
   <!-- HERO -->
-  <section class="imagenPrincipal animate__animated animate__fadeIn"></section>
+  <div class="heroImagen">
+    <div class="heroTexto">
+      <h1 class="animate__animated animate__fadeIn" style="color: white;">Características</h1>
+    </div>
+  </div>
 
-
-
+  <!--   <section class="tituloPagina">
+    <h1 class="animate__animated animate__fadeIn">Características</h1>
+  </section>
+ -->
   <!-- DESCRIPCION -->
   <div class="redondeoVisual">
-
+    <!-- 
     <h1 class="animate__animated animate__fadeIn">Características</h1>
 
+ -->
 
-
-    <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none;">
+    <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none; margin-top: 25px;">
       <div class="row g-0">
         <div class="col-md-4" style="text-align :center; margin: auto;">
           <img src="./images/beneficio-06.svg" class="img-fluid rounded-start" alt="beneficio-06" style="margin:auto;">
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Caraterística 1</h5>
-            <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!</p>
+            <h5 class="card-title">Da a conocer tus servicios e inventario de inmuebles</h5>
+            <p class="card-text">Tenemos las herramientas necesarias para que puedas implementar tus estrategias de
+              marketing inmobiliario.
+              Incrementa la visibilidad de tu marca e inmuebles en diferentes medios de difusión (Whatsapp, Facebook,
+              Twitter, Portales inmobiliarios y Página web).
+              Ten presencia en cualquier lugar del mundo y en todo momento, generando confianza en tus negocios
+              inmobiliarios con tu propia página web.
+              Convierte tus contactos en clientes, enviando automáticamente información de tus inmuebles por correo
+              electrónico masivo.
+            </p>
           </div>
         </div>
       </div>
@@ -101,14 +112,13 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Característica 2</h5>
-              <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-                totam placeat voluptatum sunt harum id exercitationem quos porro?
-                Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-                tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-                dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-                veritatis recusandae atque laudantium nesciunt cum dolorum odio.</p>
+              <h5 class="card-title">Trabaja con tu propio CRM Inmobiliario</h5>
+              <p class="card-text">Ten siempre localizada la información completa de cada cliente.
+                Crea tu propio embudo para los procesos de ventas, arriendos, permutas y otras negociaciones.
+                Cruza las propiedades con tus clientes y encuentra el mejor inmueble.
+                Sigue la evolución de un cliente por medio de llamadas, correos o reuniones.
+                Accede a un reporte constante de tus contactos con clientes y visitas.
+                Importa tu listado de clientes desde excel con un solo click.</p>
             </div>
           </div>
 
@@ -124,11 +134,13 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h5 class="card-title">Caraterística 3</h5>
-            <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-              totam placeat voluptatum sunt harum id exercitationem quos porro?
-              Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-              tenetur harum nemo!</p>
+            <h5 class="card-title">Mantén la seguridad de tu negocio como una prioridad</h5>
+            <p class="card-text">Evita por cualquier medio que la información y los datos privados de tus clientes sean
+              filtrados.
+              Construye ambientes de negocio seguros para las relaciones de confianza entre empresas.
+              Tiempo al aire (uptime) de 99.9% del sistema, ofreciendo una excelente estabilidad
+              para tener tus datos siempre disponibles.
+              Disfruta de protección avanzada contra accesos indebidos a las cuentas con malas intenciones.</p>
           </div>
         </div>
       </div>
@@ -142,14 +154,10 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Característica 4</h5>
-              <p class="card-text"> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis sint
-                totam placeat voluptatum sunt harum id exercitationem quos porro?
-                Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-                tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-                adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-                dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-                veritatis recusandae atque laudantium nesciunt cum dolorum odio.</p>
+              <h5 class="card-title">App para Celulares y Tablets</h5>
+              <p class="card-text">Tu información siempre disponible en tu teléfono celular o tablet, app para Android y
+                iOS (iPhone y iPad). Administra tus inmuebles y clientes desde cualquier lugar y realiza negocios desde
+                tu celular.</p>
             </div>
           </div>
 
