--- a/contacto.html
+++ b/contacto.html
@@ -65,18 +65,27 @@
 
 
 
+  <!-- HERO -->
+  <div class="heroImagen">
+    <div class="heroTexto">
+      <h1 class="animate__animated animate__fadeIn" style="color: white;">Contacto</h1>
+    </div>
+  </div>
+
+
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la versión
+    <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la
+    versión
     de prueba 100% funcional.
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
+
 
   <!-- DESCRIPCION -->
   <div class="contenedorFlex redondeoVisual">
 
     <section class="seccionDescripcion">
 
-      <h1 class="animate__animated animate__fadeIn">Contacto</h1>
 
       <section class="contenido" id="contenidoFormulario">
         <div class="formularioContacto">
@@ -116,13 +125,10 @@
 
       <h3 class="animate__animated animate__backInRight">Nuestra Visión</h3>
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
-        architecto minus perspiciatis expedita nesciunt, aut ratione delectus
-        rem doloribus dolore voluptatibus eos odio dolor cum molestias
-        consectetur itaque ipsam eum! Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Itaque
-        quis tempore odio, neque non, aliquam reprehenderit nulla numquam
-        deserunt, quisquam aut. Adipisci, repudiandae. Tempore.
+        Con InmoGlobal tienes en tus manos uno de los sistemas más grandes y
+        potentes del mercado. Podrás gestionar de forma integral tu inmobiliaria para que se posicione
+        por delante de la competencia y tus clientes se sientan como en casa.
+        Somos la marca que cuida de tu negocio inmobiliario como si fuera nuestra propia empresa.
       </p>
       <img src="./images/aplicacion.webp" alt="Aplicacion" />
     </aside>
