--- a/index.html
+++ b/index.html
@@ -101,30 +101,28 @@
 
     <section class="seccionDescripcion">
 
-      <h1>Aplicación Web</h1>
+      <h1>Software Integral para Administración Inmobiliaria</h1>
 
       <article class="contenido">
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
-          architecto minus perspiciatis expedita nesciunt, aut ratione delectus
-          rem doloribus dolore voluptatibus eos odio dolor cum molestias
-          consectetur itaque ipsam eum! Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Itaque molestias quidem illo unde est repudiandae
-          quis tempore odio, neque non, aliquam reprehenderit nulla numquam
-          deserunt, quisquam aut. Adipisci, repudiandae. Tempore.
+          InmoGlobal simplifica cada aspecto relacionado a la administración de contratos de alquiler, liquidaciones a
+          propietarios, ventas, cartera de propiedades, tareas, agendas, pedidos, consorcios y más... haciendo que su
+          trabajo sea 100% productivo cada día.
+        </p>
+
+        <h3>Siempre conectado y en constante Evolución</h3>
+        <p>
+          InmoGlobal no se detiene, constantemente nos encontramos evolucionando con la finalidad de ofrecer un software
+          de primera calidad. Nuestra infraestructura en la nube nos permite mantenernos a la vanguardia de las
+          tecnologías disponibles para el mercado inmobiliario. InmoGlobal está montado sobre una robusta, flexible y
+          confiable arquitectura de servicios online.
         </p>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga officia
-          possimus, quae est id dolorum animi molestiae, enim ex amet et
-          laboriosam atque obcaecati! Consectetur, sequi placeat. Ratione, earum
-          provident? Aut ratione delectus rem doloribus dolore eos molestias.
-        </p>
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Obcaecati
-          itaque perferendis magnam quia animi sequi aperiam excepturi illo
-          rerum. Consequatur qui deserunt, molestiae rerum voluptatum natus
-          ipsam nam optio repellat. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit.
+          Le invitamos a descubrir todas las <a href="./caracteristicas.html">características</a> para gestionar su
+          inmobiliaria de
+          manera rápida y
+          eficiente. Y no te olvides de solicitar acceso a la versión de prueba 100% funcional en la página de <a
+            href="./contacto.html">contacto</a>!
         </p>
       </article>
 
@@ -138,16 +136,14 @@
       <img src="./images/software-adaptable.webp" alt="Aplicacion" />
 
       <p>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam
-        architecto minus perspiciatis expedita nesciunt, aut ratione delectus
-        rem doloribus dolore voluptatibus eos odio dolor cum molestias
-        consectetur itaque ipsam eum! Lorem ipsum dolor sit amet consectetur
-        adipisicing elit.
+        Nuestro sistema es accesible desde cualquier dispositivo disponible. Accedé en cualquier lugar desde tu celular,
+        tablet, notebook y PC de Escritorio. Es 100% adaptable a cualquier tamaño de pantallas para que nunca dejes de
+        estar conectado y enfocado a tus clientes.
       </p>
-      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum exercitationem, repudiandae debitis fugit
-        dolorem dignissimos consectetur mollitia obcaecati? Ducimus explicabo dolore maxime recusandae, quod sapiente
-        iste
-        eaque architecto? Sunt, nam.
+      <p>
+        InmoGlobal es el único sistema integral desarrollado en America Latina para la
+        administración completa de empresas inmobiliarias a un valor accesible. En nuestra sección de <a
+          href="./planes.html">Planes</a> encontrarás el que mejor se adapte a tu empresa.
       </p>
     </aside>
 
@@ -172,26 +168,27 @@
 
         <section class="testimonios">
           <img src="./images/5estrellas.png" alt="estrellas" />
-          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
-            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+          <p>"Carlos Delfino - CDELFINO Propiedades. El sistema resolvió todas las necesidades de mi inmobiliaria.
+            Además ya
+            casi no estoy en la oficina y trabajo de manera remota. Tengo todo en la nube!"</p>
         </section>
 
         <section class="testimonios">
           <img src="./images/5estrellas.png" alt="estrellas" />
-          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
-            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+          <p>"Juan Pacheco - PACHECO Propiedades. Genial! Sigue superando mis espectativas día a día. Los muchachos de
+            soporte son unos estupendos. Sigan así, son 100% recomendables!"</p>
         </section>
 
         <section class="testimonios">
           <img src="./images/5estrellas.png" alt="estrellas" />
-          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
-            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+          <p>"M. Vástago - INMOCORDOBA. Los propietarios se enteran automáticamente cuando tienen
+            disponible su alquiler liquidado diréctamente en su cuenta bancaria. Estupendo!"</p>
         </section>
 
         <section class="testimonios">
           <img src="./images/5estrellas.png" alt="estrellas" />
-          <p>"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, accusamus ullam? Rem exercitationem ex
-            sint. Veniam temporibus aliquid soluta ab corporis."</p>
+          <p>"Silvana Fanten - REFANTEN. Excelente! Lo mejor es la sección de Tareas donde puedo administrar todos los
+            inconvenientes que sucedan en las propiedades que administro."</p>
         </section>
       </div>
     </div>
