--- a/planes.html
+++ b/planes.html
@@ -64,14 +64,18 @@
 
 
 
+  <!-- HERO -->
+  <div class="heroImagen">
+    <div class="heroTexto">
+      <h1 class="animate__animated animate__fadeIn" style="color: white;">Planes</h1>
+    </div>
+  </div>
 
 
   <!-- DESCRIPCION -->
   <div class="contenedorFlex redondeoVisual">
 
     <section class="seccionDescripcion">
-
-      <h1 class="animate__animated animate__fadeIn">Planes</h1>
 
       <div id="planes-contenedor">
         <div class="planes-grid">
@@ -81,23 +85,30 @@
               <h5>Estándar</h5>
             </div>
 
-            <p>Lorem ipsum dolor sit amet</p>
-            <p>consectetur adipisicing elit</p>
-            <p>Quisquam architecto minus</p>
-            <p>perspiciatis expedita nesciunt</p>
+            <p>Contratos de alquiler (hasta 40)</p>
+            <p>Cartera de inmuebles (hasta 50)</p>
+            <p>Reservas Alq. Temporales (hasta 10)</p>
+            <p>Usuarios por inmobiliaria (hasta 3)</p>
+            <p>Agenda de contactos <span>(ilimitado)</span></p>
+            <p>Ventas, Caja y CRM <span>(ilimitado)</span></p>
+            <p>Impresión de recibos y liquidaciones</p>
+            <a><button class="botonContratarEstandar">Contratar</button></a>
           </section>
 
           <section class="planes">
             <div class="alert alert-primary" role="alert">
               <h5>Gold</h5>
             </div>
-            <p>Lorem ipsum dolor sit amet</p>
-            <p>consectetur adipisicing elit</p>
-            <p>Quisquam architecto minus</p>
-            <p>perspiciatis expedita nesciunt</p>
-            <p>aut ratione delectus rem indi</p>
-            <p>doloribus dolore voluptatibus</p>
-            <p>eos odio dolor cum itaque</p>
+            <p>Contratos de alquiler (hasta 80)</p>
+            <p>Cartera de inmuebles (hasta 100)</p>
+            <p>Reservas Alq. Temporales (hasta 50)</p>
+            <p>Usuarios por inmobiliaria (hasta 10)</p>
+            <p>Agenda de contactos <span>(ilimitado)</span></p>
+            <p>Ventas, Caja y CRM <span>(ilimitado)</span></p>
+            <p>Impresión de recibos y liquidaciones</p>
+            <p>App InmoGlobal (Android - IOS)</p>
+            <p>Avisos destacados en (Red InmoGlobal)</p>
+            <a><button class="botonContratarGold">Contratar</button></a>
           </section>
 
           <section class="planes animate__animated animate__tada">
@@ -105,16 +116,21 @@
               <h5>Premium</h5>
             </div>
 
-            <p>Lorem ipsum dolor sit amet</p>
-            <p>consectetur adipisicing elit</p>
-            <p>Quisquam architecto minus</p>
-            <p>perspiciatis expedita nesciunt</p>
-            <p>aut ratione delectus rem indi</p>
-            <p>doloribus dolore voluptatibus</p>
-            <p>eos odio dolor cum itaque</p>
-            <p>consectetur itaque ipsam eum</p>
-            <p>Itaque molestias quidem eti</p>
-            <p>Fuga officia possimus tempore</p>
+            <p>Contratos de alquiler <span>(ilimitado)</span>
+            </p>
+            <p>Cartera de inmuebles <span>(ilimitado)</span></p>
+            <p>Reservas Alq. Temporales <span>(ilimitado)</span></p>
+            <p>Usuarios por inmobiliaria <span>(ilimitado)</span></p>
+            <p>Agenda de contactos <span>(ilimitado)</span></p>
+            <p>Ventas, Caja y CRM <span>(ilimitado)</span></p>
+            <p>Impresión de recibos y liquidaciones</p>
+            <p>App InmoGlobal (Android - IOS)</p>
+            <p>Avisos destacados en (Red InmoGlobal)</p>
+            <p>Difusión GRATUITA en portales y redes!</p>
+            <p>Creación y seguimiento de Tareas</p>
+            <p>Interesados en propiedades</p>
+            <p>Administración de Consorcios</p>
+            <a><button class="botonContratarPremium">Contratar</button></a>
           </section>
 
         </div>
