--- a/soporte.html
+++ b/soporte.html
@@ -63,28 +63,32 @@
   </nav>
 
 
+  <!-- HERO -->
+  <div class="heroImagen">
+    <div class="heroTexto">
+      <h1 class="animate__animated animate__fadeIn" style="color: white;">Preguntas Frecuentes</h1>
+    </div>
+  </div>
 
   <!-- DESCRIPCION FAQ-->
   <div class="redondeoVisual">
 
-    <section class="seccionDescripcion">
-      <h1 class="animate__animated animate__fadeIn">Preguntas Frecuentes</h1>
-    </section>
 
-    <div class="accordion" id="acordionSoporte" style="padding:25px 40px 100px;">
+    <div class="accordion" id="acordionSoporte">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
             aria-expanded="true" aria-controls="collapseOne">
-            Pregunta Frecuente 1
+            Por qué InmoGlobal?
           </button>
         </h2>
         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
           data-bs-parent="#acordionSoporte">
-          <div class="accordion-body">
-            <strong>Esta es la primera pregunta Frecuente.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Quis sint totam placeat voluptatum sunt harum id exercitationem quos porro? Rerum deserunt
-            consequatur, deleniti quos at voluptate repellendustenetur harum nemo!
+          <div class="accordion-body">InmoGlobal es una herramienta pensada para revolucionar
+            la forma de administrar alquileres. Nuestro producto nació en el año 2010 como respuesta a una necesidad
+            creciente que tenía el sector inmobiliario a la hora de tener que administrar sus alquileres en forma
+            eficiente y no contar con una herramienta que sea capaz de absorber las demandantes tareas que significa
+            llevar una administración inteligente.
           </div>
         </div>
       </div>
@@ -92,20 +96,14 @@
         <h2 class="accordion-header" id="headingTwo">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-            Pregunta Frecuente 2
+            Cómo adquirir InmoGlobal?
           </button>
         </h2>
         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo"
           data-bs-parent="#acordionSoporte">
           <div class="accordion-body">
-            <strong>Esta es la segunda pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Quis sint
-            totam placeat voluptatum sunt harum id exercitationem quos porro?
-            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-            tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-            dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-            veritatis recusandae atque laudantium nesciunt cum dolorum odio.
+            InmoGlobal funciona con la modalidad SaaS (Software as a Service). Esto significa que no tiene que
+            comprarlo, simplemente paga por un servicio en forma periódica mientras le sea útil.
           </div>
         </div>
       </div>
@@ -113,17 +111,17 @@
         <h2 class="accordion-header" id="headingThree">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-            Pregunta Frecuente 3
+            Toda la información estará en internet? Qué pasa con la seguridad?
           </button>
         </h2>
         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree"
           data-bs-parent="#acordionSoporte">
           <div class="accordion-body">
-            <strong>Esta es la tercera pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur adipisicing
-            elit. Quis sint
-            totam placeat voluptatum sunt harum id exercitationem quos porro?
-            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-            tenetur harum nemo!
+            Sí, a pesar de que pueda sonar algo desafiante, administrar su información en internet es parte de los
+            grandes cambios que las empresas ya están implementando. Hoy en día, Gmail, Dropbox y cualquier Home banking
+            maneja información privada y de suma importancia para usted y lo hacen con estrictas normas de seguridad al
+            igual que nosotros. En InmoGlobal hemos tomado todas las precauciones para que su única preocupación sea
+            como sacarle provecho a toda la potencia que ofrece una herramienta on-line.
           </div>
         </div>
       </div>
@@ -131,20 +129,31 @@
         <h2 class="accordion-header" id="headingFour">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
             data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-            Pregunta Frecuente 4
+            Puedo renunciar al servicio en cualquier momento?
           </button>
         </h2>
         <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour"
           data-bs-parent="#acordionSoporte">
           <div class="accordion-body">
-            <strong>Este es la cuarta pregunta frecuente.</strong> Lorem ipsum, dolor sit amet consectetur
-            adipisicing elit. Quis sint
-            totam placeat voluptatum sunt harum id exercitationem quos porro?
-            Rerum deserunt consequatur, deleniti quos at voluptate repellendus
-            tenetur harum nemo! Lorem ipsum dolor sit amet consectetur
-            adipisicing elit. Ab, doloribus laborum aliquid reiciendis, illo
-            dignissimos iusto quidem ratione nulla, corrupti eligendi magni
-            veritatis recusandae atque laudantium nesciunt cum dolorum odio.
+            Sí, el único requisito es estar al día con su abono. De ahí en más usted decide cuánto tiempo va a
+            utilizarlo. Es importante avisar que no se necesitará más el servicio así realizamos la baja
+            correspondiente. Si el sistema no se abona por tres mes consecutivos y sin aviso se podrá cerrar y eliminar
+            su información definitivamente.
+          </div>
+        </div>
+      </div>
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="headingFive">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+            Hay limitaciones en cuanto a cantidad de usuarios o puestos de trabajo?
+          </button>
+        </h2>
+        <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive"
+          data-bs-parent="#acordionSoporte">
+          <div class="accordion-body">
+            No, puede usar la cantidad de usuarios y puestos de trabajo que desee. Siempre que sea
+            utilizado desde una única inmobiliaria.
           </div>
         </div>
       </div>
