Tercera Entrega del Proyecto Final

--- a/contacto.html
+++ b/contacto.html
@@ -63,8 +63,6 @@
   </nav>
 
 
-
-
   <!-- HERO -->
   <div class="heroImagen">
     <div class="heroTexto">
@@ -72,13 +70,13 @@
     </div>
   </div>
 
-
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la
-    versión
+    <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la versión
     de prueba 100% funcional.
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
+
+
 
 
   <!-- DESCRIPCION -->
@@ -86,6 +84,7 @@
 
     <section class="seccionDescripcion">
 
+      <h1 class="animate__animated animate__fadeIn">Contacto</h1>
 
       <section class="contenido" id="contenidoFormulario">
         <div class="formularioContacto">
@@ -125,10 +124,9 @@
 
       <h3 class="animate__animated animate__backInRight">Nuestra Visión</h3>
       <p>
-        Con InmoGlobal tienes en tus manos uno de los sistemas más grandes y
-        potentes del mercado. Podrás gestionar de forma integral tu inmobiliaria para que se posicione
-        por delante de la competencia y tus clientes se sientan como en casa.
-        Somos la marca que cuida de tu negocio inmobiliario como si fuera nuestra propia empresa.
+        Con InmoGlobal tienes en tus manos uno de los sistemas más grandes y potentes del mercado. Podrás gestionar de
+        forma integral tu inmobiliaria para que se posicione por delante de la competencia y tus clientes se sientan
+        como en casa. Somos la marca que cuida de tu negocio inmobiliario como si fuera nuestra propia empresa.
       </p>
       <img src="./images/aplicacion.webp" alt="Aplicacion" />
     </aside>
