Tercera Entrega del Proyecto Final

--- a/caracteristicas.html
+++ b/caracteristicas.html
@@ -8,10 +8,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <meta name="description"
-    content="Sitio de AplicacionWeb donde encontrarás todas sus Características y Funcionalidad, así como los planes disponibles y toda la Documentación y Soporte que necesitás.">
+    content="Sitio de InmoGlobal donde encontrarás todas sus Características y Funcionalidad, así como los planes disponibles y toda la Documentación y Soporte que necesitás para administrar tu Inmobiliaria.">
   <meta name="keywords"
-    content="APLICACIONWEB, INMOBILIARIA, CONTRATOS, ALQUILERES, ADMINISTRACION, VENTAS, INTERESADOS, TAREAS">
-  <title>AplicacionWeb | Características</title>
+    content="INMOGLOBAL, INMOBILIARIA, CONTRATOS, ALQUILERES, ADMINISTRACION, VENTAS, INTERESADOS, TAREAS">
+  <title>InmoGlobal | Características</title>
 
   <!-- GOOGLE FONTS-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -35,7 +35,7 @@
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-white ">
     <div class="container-fluid">
       <a class="navbar-brand mb-0 " href="./index.html"><img src="./images/logo.png" alt="" width="100" height=""
-          class="d-inline-block align-top animacionLogo"></a>
+          class="d-inline-block align-top elLogo"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Menú Hamburgesa">
         <span class="navbar-toggler-icon"></span>
@@ -71,16 +71,8 @@
     </div>
   </div>
 
-  <!--   <section class="tituloPagina">
-    <h1 class="animate__animated animate__fadeIn">Características</h1>
-  </section>
- -->
   <!-- DESCRIPCION -->
   <div class="redondeoVisual">
-    <!-- 
-    <h1 class="animate__animated animate__fadeIn">Características</h1>
-
- -->
 
     <div class="card mb-3" style="max-width: 1100px; margin:auto; border: none; margin-top: 25px;">
       <div class="row g-0">
@@ -177,13 +169,13 @@
       <section>
         <div class="formasContacto">
           <div>
-            <a href="mailto:contacto@aplicacionweb.com" target="_blank" rel="noopener">
+            <a href="mailto:contacto@inmoglobal.com.ar" target="_blank" rel="noopener">
               <img src="./images/icono-email1.png" alt="email" />
             </a>
           </div>
           <div>
-            <a href="mailto:contacto@aplicacionweb.com" target="_blank" rel="noopener">
-              contacto@aplicacionweb.com
+            <a href="mailto:contacto@inmoglobal.com.ar" target="_blank" rel="noopener">
+              contacto@inmoglobal.com.ar
             </a>
           </div>
         </div>
@@ -217,7 +209,7 @@
 
       <section>
         <div class="formasContacto">
-          <h1>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h1>
+          <h5>Suscribite a nuestro Newsletter para recibir Promociones & Noticias</h5>
           <form>
             <input type="email" name="emailSuscripcion" id="emailSuscripcion" placeholder="tu@email.com">
             <input type="submit" value="Suscribirme" />
