--- a/soporte.html
+++ b/soporte.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <link rel="icon" href="./images/favicon.png">
   <meta name="description"
     content="Sitio de InmoGlobal donde encontrarás todas sus Características y Funcionalidad, así como los planes disponibles y toda la Documentación y Soporte que necesitás para administrar tu Inmobiliaria.">
   <meta name="keywords"
