Tercera Entrega del Proyecto Final

--- a/contacto.html
+++ b/contacto.html
@@ -71,6 +71,7 @@
     </div>
   </div>
 
+
   <div class="alert alert-success alert-dismissible fade show" role="alert">
     <strong>¡Probalo Gratis!</strong> Recordá que completando el formulario también podés solicitar acceso a la versión
     de prueba 100% funcional.
@@ -120,14 +121,14 @@
     <!-- SIDEBAR -->
     <aside>
 
-
-      <h3 class="animate__animated animate__backInRight">Nuestra Visión</h3>
+      <h3>Nuestra Visión</h3>
       <p>
         Con InmoGlobal tienes en tus manos uno de los sistemas más grandes y potentes del mercado. Podrás gestionar de
         forma integral tu inmobiliaria para que se posicione por delante de la competencia y tus clientes se sientan
         como en casa. Somos la marca que cuida de tu negocio inmobiliario como si fuera nuestra propia empresa.
       </p>
       <img src="./images/aplicacion.webp" alt="Aplicacion" />
+
     </aside>
 
   </div>
